appId: com.anonymous.BathLinkApp
---
- tapOn: "Basketball"
- assertVisible: "📅"
- tapOn: "close"
